# tomldir

./: Cargo.toml  LICENSE  Makefile  README.md  justfile  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: custom_hasher.rs  gitlab_demo.rs
src/: config.rs  error.rs  lib.rs  store.rs
tests/: integration_tests.rs
