[package]
name = "tomldir"
version = "0.1.3"
edition = "2024"
rust-version = "1.92"
description = "A lean, thread-safe TOML configuration loader focused on maps and flattening"
license = "MIT"
documentation = "https://docs.rs/tomldir/"
repository = "https://github.com/abhishekshree/tomldir"
readme = "README.md"
keywords = ["toml", "config", "configuration", "flatten", "map"]
categories = ["config", "parsing", "data-structures"]
authors = ["Abhishek Shree <abhishek.shree@outlook.com>"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
preserve_order = ["dep:indexmap", "toml/preserve_order"]

[dependencies]
toml = { version = "0.9", default-features = false, features = ["parse", "display", "serde"] }
thiserror = "2.0.18"
indexmap = { version = "2.0", optional = true }

[dev-dependencies]
rustc-hash = "2.0"

[package.metadata.release]
push = true
sign-commit = false
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
pre-release-commit-message = "chore: release v{{version}}"
push-remote = "origin"

